@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.1
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fix crash with mods that create items before the start of the game. 
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.0
 Date: 2022-06-07
